--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,15 @@
     <string name="work_content">工作事项或内容</string>
     <string name="execute_person">执行人员</string>
     <string name="work_persent">此工作所占比重</string>
+    <string name="complete_time">完成时间</string>
     <string name="remark">备注</string>
     <string name="complete_condition">完成情况</string>
+    <string name="submit">立即提交</string>
 
-    <string name="add_work">添加工作</string>
+    <string name="add_work">再添加一项</string>
+    
+    <string name="myjournal">我的日志</string>
+    <string name="bmygrz">部门员工日志</string>
 
 
 </resources>
