修改写日计划头部布局，增加工作分类文字描述；

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="write_dayplan">写日计划</string>
     <string name="write_weeksum">写周总结</string>
     <string name="write_weekplan">写周计划</string>
-    
-    <string name="work_sort">工作分类</string>
+
+    <string name="work_sort">工作事项等级</string>
     <string name="work_content">工作事项或内容</string>
     <string name="execute_person">执行人员</string>
     <string name="work_persent">此工作所占比重</string>
@@ -23,7 +23,7 @@
     <string name="submit">立即提交</string>
 
     <string name="add_work">再添加一项</string>
-    
+
     <string name="myjournal">我的日志</string>
     <string name="bmygrz">部门员工日志</string>
 
