--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,18 @@
 
     <string name="work_sort">工作事项等级</string>
     <string name="work_content">工作事项或内容</string>
-    <string name="execute_person">执行人员</string>
+    <string name="execute_person">执行人员:</string>
     <string name="work_persent">此工作所占比重</string>
     <string name="complete_time">完成时间</string>
     <string name="remark">备注</string>
     <string name="complete_condition">完成情况</string>
     <string name="submit">立即提交</string>
+
+    <string name="hint_dayplan_percent">所占比重:</string>
+    <string name="hint_dayplan_content">工作内容:</string>
+    <string name="hint_daysum_wcqk">完成情况:</string>
+    <string name="hint_daysum_xxfx">学习反省:</string>
+
 
     <string name="add_work">再添加一项</string>
 
