--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,30 @@
     <string name="my_job">现任职位</string>
     <string name="my_card">我的名片</string>
     <string name="my_attendance">我的考勤</string>
+
+
+    <!--食品录入客户-->
+    <string name="member_sort">会员类型</string>
+    <string name="company_profile">公司简介:</string>
+    <string name="company_address">公司地址:</string>
+    <string name="detail_address">详细地址</string>
+    <string name="company_sort">公司类型</string>
+    <string name="major_product">主营产品类型:</string>
+    <string name="customer_job">客户职位:</string>
+    <string name="line_phone">固定电话:</string>
+    <string name="e_mail">电子邮箱:</string>
+    <string name="QQ">QQ:</string>
+    <string name="message">传真:</string>
+
+    <string name="member_name">请输入会员名称</string>
+    <string name="company_name">请输入公司名称</string>
+    <string name="telephone">请输入手机号码</string>
+    <string name="customer_name">请输入客户姓名</string>
+    <string name="hint_profile">请输入公司简介</string>
+    <string name="hint_address">请输入详细地址</string>
+    <string name="hint_jog">请输入客户职位</string>
+    <string name="hint_linenumber">请输入固定电话</string>
+    <string name="hint_emil">请输入电子邮件</string>
+    <string name="hint_qq">请输入QQ号</string>
+    <string name="hint_message">请输入传真号</string>
 </resources>
