--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,5 @@
     <string name="string_help_text">\"当前应用缺少必要权限。请点击\\\"设置\\\"-\\\"权限\\\"-打开所需权限。\"</string>
     <string name="quit">退出</string>
     <string name="settings">设置</string>
+    <string name="Unrealized">物通的开发人员正在努力开发中...</string>
 </resources>
